--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/RBK-Tunisia/rbktn12-mvp-starter#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "mongoose": "^5.12.10",
-    "mysql2": "^2.2.5",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -32,6 +34,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "nodemon": "^2.0.7",
+    "react-router-dom": "^6.3.0",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   }
